<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/h5_default_titlebar_color"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_get"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="12dp"
        android:background="@color/h5_default_titlebar_color"
        android:text="@string/rpc_get_btn"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_post"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="12dp"
        android:background="@color/h5_default_titlebar_color"
        android:text="@string/rpc_post_btn"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_exception"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="12dp"
        android:background="@color/h5_default_titlebar_color"
        android:text="@string/rpc_exception_btn"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/user_active_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/rpc_exception_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:gravity="center_vertical"
        android:text="@string/rpc_interceptor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/rpc_self_encrypt" />
</LinearLayout>